--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
         run: yarn install # or pnpm install / yarn install / bun install
       - name: Build with VitePress
         run: |
-          yarn docs:build # or pnpm docs:build / yarn docs:build / bun run docs:build
+          yarn docs:build
           touch docs/.vitepress/dist/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
